--- a/app/views/tracks/edit.html.erb
+++ b/app/views/tracks/edit.html.erb
@@ -2,10 +2,13 @@
 
 <%= form_for [@album, @track] do |t| %>
 
+<%= t.label :track_no, {autofocus: true} %>
+<%= t.text_field :track_no %>
+<br>
+
 <%= t.label 'Title' %>
 <%= t.text_field :t_title %>
 <br>
-
 
 <%= t.submit %>
 
